tests/src/frontend/syntax/invalid/no_args_class_pattern.sk
base class Foo {
  children =
  | A()
  | B()
  | C()

  fun bar(): void
  | A _ -> void
  | B
  | C _ ->
    void
}
